"Switch Object" fails to properly undo, crashes #81076

Closed
opened 2020-09-23 09:03:21 +02:00 by Campbell Barton · 4 comments

Accessing the "Switch Object" tool currently asserts/crashes when undo/redoing.

Edit Mode

  • Duplicate the default cube and move it.
  • Enter edit-mode.
  • Hover over the other cube.
  • Press D.
  • Press undo.

BLI_assert failed: /src/blender/source/blender/editors/mesh/editmesh_undo.c:747, mesh_undosys_step_decode(), at 'mesh_undosys_poll(C)'

Sculpt Mode

  • Duplicate the default cube and move it.
  • Enter sculpt mode.
  • Hover over the other cube.
  • Sculpt on each, pressing D to swap to the other (3 times, if not try 4 or 5).
  • Hold Ctrl-Z
  • Hold Ctrl-Shift-Z.

Blender Crashes.


Rev 286909ded74390e3ad5d97560fa6ff34012acce8

Accessing the "Switch Object" tool currently asserts/crashes when undo/redoing. ## Edit Mode - Duplicate the default cube and move it. - Enter edit-mode. - Hover over the other cube. - Press D. - Press undo. BLI_assert failed: /src/blender/source/blender/editors/mesh/editmesh_undo.c:747, mesh_undosys_step_decode(), at 'mesh_undosys_poll(C)' ## Sculpt Mode - Duplicate the default cube and move it. - Enter sculpt mode. - Hover over the other cube. - Sculpt on each, pressing D to swap to the other (3 times, if not try 4 or 5). - Hold Ctrl-Z - Hold Ctrl-Shift-Z. Blender Crashes. ---- Rev `286909ded74390e3ad5d97560fa6ff34012acce8`
Pablo Dobarro was assigned by Campbell Barton 2020-09-23 09:03:21 +02:00
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 14c0897671

This issue was referenced by 14c0897671105b31adfbbc2f1ba8fb7af06b1ce8
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81076
No description provided.